# gomail-app

./: CMakeLists.txt  Dockerfile  Dockerfile.frontend  README.md  app.js  docker-compose.yml  package-lock.json  package.json
android/GoMail/: settings.gradle.kts
android/GoMail/app/: build.gradle.kts
android/GoMail/gradle/wrapper/: gradle-wrapper.properties
backend/: sharedData.js
backend/src/BloomFilter/: BloomFilter.cpp  BloomFilter.h
backend/src/CLI/: CLI.cpp  CLI.h
backend/src/FileManager/: BlacklistFileManager.cpp  BlacklistFileManager.h  BloomFilterFileManager.cpp  BloomFilterFileManager.h  IFileManager.h
backend/src/HashFunctions/: DoubleHash.cpp  DoubleHash.h  HashFunction.h  HashFunctionFactory.cpp  HashFunctionFactory.h  StdHash.cpp  StdHash.h
backend/src/UrlCheck/: url_blacklist.cpp  url_blacklist.h  url_validation.cpp  url_validation.h
backend/src/client/: client.py
backend/src/controllers/: blacklist.js  labels.js  mails.js  users.js
backend/src/middleware/: auth.js
backend/src/models/: Blacklist.js  Email.js  Label.js  User.js
backend/src/requests/: requestCheck.cpp  requestCheck.h
backend/src/routes/: blacklist.js  labels.js  mails.js  users.js
backend/src/server/: server_arg_validation.h  server_main.cpp
data/: README.md  bloom_filter.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  fetchWrapper.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: InboxPage.css  InboxPage.jsx  LabelManager.css  LabelManager.jsx  LoginPage.css  LoginPage.jsx  RegisterPage.css  RegisterPage.jsx
(+24 files in other folders)
